# POO_CRUD

./: .gitignore  README.md  __app__.py  env.py  pyproject.toml
assets/: V2.drawio
data/: consulta.json  instituicao.json  medico.json  paciente.json
data/arquivos_base/: instituicao.json
interface/: interface.py
manager/: manager.py
objects/: consulta.py  instituicao.py  medico.py  paciente.py
testing/: test.ipynb
